syntax = "proto3";

package natsPb;

option go_package = "/natsPb";




message IsUserExist_REQUEST_request {
      uint64 userId = 1;
}
message IsUserExist_REQUEST_response {
      bool   exist  = 1;
}
